Cleanup build script